--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,17 @@
 /* This is where styles are defined for your page. */
 /* One style is provided as example. */
 
+ul {
+    list-style-type: none;    
+}
+
 h1 {
     color: green;
+    font-size:25px;
+}
+
+body {
+    background-color: #ccffff;
+    color: blue;
+    font-size:15px;
 }
